Add Call to Action and Footer sections

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
         </div>
     </div>
 
+    <div class="call-to-action-section">
+        <div class="call-to-action">
+            <div class="call-to-acton-text">
+                <div class="call-to-action-header">Call to action! It's time!</div>
+                <div class="call-to-action-content">Sign up for our product by clicking that button right over there!</div>
+            </div>
+        <button type="button" class="button-2">Sign up</button> 
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright &nbsp; © &nbsp; The Odin Project</p>
+    </div>
+
     
 </body>
 </html>
